[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/DisplayTime.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Board.gd" type="Script" id=2]
[ext_resource path="res://Fonts/architect_65.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/background-01-01.png" type="Texture" id=4]
[ext_resource path="res://images/baseline_refresh_white_48dp.png" type="Texture" id=5]
[ext_resource path="res://images/baseline_arrow_back_white_48dp.png" type="Texture" id=6]
[ext_resource path="res://images/baseline_lens_white_48dp.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Baloo2-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/baseline_masks_white_48dp.png" type="Texture" id=9]
[ext_resource path="res://Scripts/TopUI.gd" type="Script" id=10]
[ext_resource path="res://images/baseline_masks_black_48dp.png" type="Texture" id=11]
[ext_resource path="res://Scripts/LevelInfo.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 8 )

[node name="Game" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_right = 576.0
margin_bottom = 1040.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopUI" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Back" type="Button" parent="TopUI"]
margin_right = 100.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TopUI/Back"]
position = Vector2( 10, 10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
centered = false

[node name="Restart" type="Button" parent="TopUI"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TopUI/Restart"]
position = Vector2( 10, 10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
centered = false

[node name="DisplayTime" type="Label" parent="TopUI"]
margin_left = 200.0
margin_right = 376.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="TopUI/DisplayTime"]

[node name="Viruses" type="Button" parent="TopUI"]
margin_left = 376.0
margin_right = 476.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TopUI/Viruses"]
position = Vector2( 10, 10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="TopUI/Viruses"]
anchor_left = 0.0116589
anchor_top = -0.0116583
anchor_right = 0.0116589
anchor_bottom = -0.0116583
margin_left = -1.16589
margin_top = 1.16583
margin_right = 98.8341
margin_bottom = 101.166
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.00784314, 0.670588, 0.690196, 1 )
text = "20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask" type="Button" parent="TopUI"]
margin_left = 476.0
margin_right = 576.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteSprite" type="Sprite" parent="TopUI/Mask"]
texture = ExtResource( 9 )
centered = false

[node name="BlackSprite" type="Sprite" parent="TopUI/Mask"]
visible = false
scale = Vector2( 1.97153, 1.99582 )
texture = ExtResource( 11 )
centered = false

[node name="LevelInfo" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelInfo"]
margin_top = 100.0
margin_right = 576.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncubationTime" type="Control" parent="LevelInfo/VBoxContainer"]
margin_right = 576.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 33 )

[node name="ProgressBarLabel" type="Label" parent="LevelInfo/VBoxContainer/IncubationTime"]
margin_top = -4.0
margin_right = 200.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Incubation time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="LevelInfo/VBoxContainer/IncubationTime"]
margin_left = 190.0
margin_top = 3.0
margin_right = 560.0
margin_bottom = 24.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VirusChanges" type="HBoxContainer" parent="LevelInfo/VBoxContainer"]
margin_top = 37.0
margin_right = 576.0
margin_bottom = 70.0
rect_min_size = Vector2( 576, 33 )
alignment = 1

[node name="VirusIncrease" type="RichTextLabel" parent="LevelInfo/VBoxContainer/VirusChanges"]
margin_left = 36.0
margin_right = 286.0
margin_bottom = 33.0
rect_min_size = Vector2( 250, 33 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Prev virus increase: [color=red]+1[/color]"
meta_underlined = false
text = "Prev virus increase: +1"
scroll_active = false

[node name="VirusDecrease" type="RichTextLabel" parent="LevelInfo/VBoxContainer/VirusChanges"]
margin_left = 290.0
margin_right = 540.0
margin_bottom = 33.0
rect_min_size = Vector2( 250, 33 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Prev virus recoveries: [color=green]+1[/color]"
meta_underlined = false
text = "Prev virus recoveries: +1"
scroll_active = false

[node name="ProgressBarTimer" type="Timer" parent="LevelInfo"]

[node name="VirusSpreadTimer" type="Timer" parent="."]

[node name="Board" type="Control" parent="."]
margin_left = 38.0
margin_top = 200.0
margin_right = 538.0
margin_bottom = 240.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="new_game" from="TopUI" to="Board" method="_on_TopUI_new_game"]
[connection signal="new_game" from="TopUI" to="TopUI/DisplayTime" method="_on_TopUI_new_game"]
[connection signal="new_game" from="TopUI" to="LevelInfo" method="_on_TopUI_new_game"]
[connection signal="pressed" from="TopUI/Back" to="TopUI" method="_on_Back_pressed"]
[connection signal="pressed" from="TopUI/Restart" to="TopUI" method="_on_Restart_pressed"]
[connection signal="timeout" from="TopUI/DisplayTime/Timer" to="TopUI/DisplayTime" method="_on_Timer_timeout"]
[connection signal="pressed" from="TopUI/Mask" to="Board" method="_on_Mask_pressed"]
[connection signal="timeout" from="LevelInfo/ProgressBarTimer" to="LevelInfo" method="_on_ProgressBarTimer_timeout"]
[connection signal="timeout" from="VirusSpreadTimer" to="Board" method="_on_VirusSpread_timeout"]
[connection signal="game_over" from="Board" to="TopUI/DisplayTime" method="_on_Board_game_over"]
[connection signal="game_over" from="Board" to="LevelInfo" method="_on_Board_game_over"]
[connection signal="game_started" from="Board" to="TopUI/DisplayTime" method="_on_Board_game_started"]
[connection signal="game_started" from="Board" to="LevelInfo" method="_on_Board_game_started"]
[connection signal="viruses_changed" from="Board" to="TopUI" method="_on_Board_viruses_changed"]
[connection signal="viruses_changed" from="Board" to="LevelInfo" method="_on_Board_viruses_changed"]
